--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         </div>
     </section>
 
+    <section>
+        <h2> filmes</h2>
+        <div>
+            
+        </div>
+    </section>
+
 </body>
 
 </html>
