--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <section>
         <h2> filmes</h2>
         <div>
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" 
-        <v>
+            <a href="https://img.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" >
+            </a>
+        
     </section>
 
 </body>
