--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section>
         <h2> filmes</h2>
-        <div class="">
+        <div class="categoria-videos">
            <a href="https://img.youtube.com/watch?v=cs15QqG6Gjc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" >
             </a>
